<resources>
    <string name="app_name">Fluenta</string>
    <string name="hello_blank_fragment">Merhaba boş fragment</string>
    <string name="app_logo">uygulama_logosu</string>
    <string name="your_personal_language_tutor">Kişisel dil eğitmeniniz.</string>
    <string name="loading_bar">yükleme_çubuğu</string>
    <string name="lets_start">Hadi Başlayalım!</string>
    <string name="quote_logo">alıntı_logosu</string>
    <string name="socrates_quote">“Tek bir iyi şey vardır, bilgi; ve tek bir kötü şey vardır, cehalet.”</string>
    <string name="socrates">─ Sokrates</string>
    <string name="quote_fab_button">Ana sayfaya git</string>
    <string name="fluenta_slogan">Fluenta ile öğren, akıcı konuş.</string>
    <string name="already_have_account">Zaten bir hesabım var.</string>
    <string name="you_dont_have_account">Hesabınız yok mu?</string>
    <string name="welcome_hello_logo">karşılama_merhaba_logosu</string>
    <string name="sign_up_and_learn">Kaydolun ve hayalinizdeki dili öğrenmeye başlayın.</string>
    <string name="log_in_and_learn">Giriş yapın ve öğrenmeye devam edin.</string>
    <string name="e_mail">E-posta</string>
    <string name="password">Şifre</string>
    <string name="username">Kullanıcı adı</string>
    <string name="go_forward">İlerle</string>
    <string name="user_gmail_com">kullanici@gmail.com</string>
    <string name="continue_str">Devam Et</string>
    <string name="register">Kaydol</string>
    <string name="login">Giriş Yap</string>
    <string name="privacy_policy">Katılarak, Şartlar ve Gizlilik Politikası’nı okuduğunuzu ve kabul ettiğinizi onaylarsınız.</string>
    <string name="or">veya</string>
    <string name="arrow_back_image_view">geriOkResmiGörünümü</string>
    <string name="hello_logo_welcome">merhaba_logosu_hoşgeldiniz</string>
    <string name="apple_icon">apple_simge</string>
    <string name="sign_up_with_apple">Apple ile kaydol</string>
    <string name="log_in_with_apple">Apple ile giriş yap</string>
    <string name="google_icon">google_simge</string>
    <string name="sign_up_with_google">Google ile kaydol</string>
    <string name="log_in_with_google">Google ile giriş yap</string>
    <string name="create_password">Lütfen bir şifre oluşturun:</string>
    <string name="enter_password">Lütfen şifrenizi girin:</string>
    <string name="enter_username">Lütfen kullanıcı adınızı girin:</string>
    <string name="forgot_password">Şifrenizi mi unuttunuz?</string>
    <string name="enter_your_email">Şifre sıfırlamak için e-posta adresinizi girin</string>
    <string name="reset_password">Şifreyi Sıfırla</string>
    <string name="password_rules"><![CDATA[Güçlü bir şifre oluşturun, en az 8 karakter içermelidir. Büyük harf, küçük harf, rakamlar ve !@#$%^&*() gibi özel karakterler içerebilir.]]></string>
    <string name="username_rules">Benzersiz bir kullanıcı adı oluşturun. Büyük/küçük harf, 0-9 arası rakamlar, alt çizgi (_) ve tire (-) kullanabilirsiniz.</string>
    <string name="name_surname">Ad Soyad</string>
    <string name="sifremi_unuttum">Şifremi sıfırla</string>
    <string name="enter_mail_adress">Şifre sıfırlama bağlantısını almak için e-posta adresinizi girin</string>
    <string name="oxford_3000_words">Oxford 3000 A1-B2 Kelimeleri</string>
    <string name="most_common_words">En Yaygın C1-C2 Kelimeler</string>
    <string name="most_common_phrases">En Yaygın İfadeler</string>
    <string name="translator">Çeviri</string>
    <string name="favorites">Favoriler</string>
    <string name="logout">Çıkış Yap</string>
    <string name="listen_and_learn">Dinle ve Öğren</string>
    <string name="ai_tutor">Yapay Zeka Eğitmeni</string>
    <string name="upgrade_pro">Pro’ya Yükselt</string>
    <string name="my_account">Hesabım</string>
    <string name="settings">Ayarlar</string>
    <string name="feedback">Geri Bildirim</string>
    <string name="about_us">Hakkımızda</string>
    <string name="main_page">Ana Sayfa</string>
    <string name="drawer_open">Menüyü Aç</string>
    <string name="drawer_close">Menüyü Kapat</string>
    <string name="cevrilecek_metni_girin">Çevrilecek metni girin</string>
    <string name="Cevir">Çevir</string>
    <string name="ceviri_sonucu">Çeviri Sonucu</string>
    <string name="about_us_text">Fluenta, dil öğrenme sürecini hızlandıran, eğlenceli ve akıllı bir öğrenme deneyimi sunan yenilikçi bir uygulamadır. Günlük hayatınızda karşılaşacağınız kelimeleri, cümleleri ve gramer yapılarını en iyi şekilde öğrenmenize yardımcı olur.</string>
    <string name="one_cikan_ozellikler">🚀 Öne Çıkan Özellikler:</string>
    <string name="list_of_about_us">✅ Oxford 3000 Kelime Listesi ile en çok kullanılan kelimeleri öğrenin.\n\n✅ Günlük Pratik Cümleler sayesinde konuşma becerilerinizi geliştirin.\n\n✅ Seslendirme Desteği ile kelimelerin doğru telaffuzlarını öğrenin.\n\n✅ Anında Çeviri Özelliği sayesinde bilmediğiniz kelimeleri hızlıca anlayın.\n\n✅ Yapay Zeka Destekli Dersler ile seviyenize uygun içerikler keşfedin.\n\n✅ Gerçek Hayattan Örnekler ile öğrendiklerinizi pekiştirin.\n\n✅ Motivasyon Mesajları ile dil öğrenme sürecinizde ilham alın.\n\n📖 Fluenta, başlangıç seviyesinden ileri düzeye kadar herkes için mükemmel bir dil öğrenme deneyimi sunar.\n\nHemen keşfetmeye başlayın ve dil becerilerinizi geliştirin! 🚀</string>
    <string name="explore">Keşfet</string>
    <string name="blank" />
    <string name="word_level">A2</string>
    <string name="word_name">A piece of cake</string>
    <string name="word_type">verb</string>
    <string name="word_meaning">terk etmek</string>
    <string name="word_eng_example">She had to abandon the project.</string>
    <string name="word_tr_example">O gemiyi terk etmek zorunda</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="oxford_favorites"><![CDATA[Oxford 3000 A1 & B2 Favoriler]]></string>
    <string name="phrases_favorites">Favori Yaygın İfadeler</string>
    <string name="common_words_favorites"><![CDATA[Favori C1 & C2 Kelimeler]]></string>
    <string name="voice_it">Voice It</string>
    <string name="add_favorite">Add to Favorites</string>
    <string name="home">Ana Sayfa</string>
    <string name="search">Arama</string>
    <string name="feedback_topic">Geri Bildirim Konusu</string>
    <string name="feedback_content">Geri Bildiriminizi Yazın</string>
    <string name="feedback_button">Geri Bildirimi Gönder</string>
    <string name="select_story_level">Hikaye Seviyesini Seçin:</string>
    <string name="a1_a2">A1-A2</string>
    <string name="b1_b2">B1-B2</string>
    <string name="c1_c2">C1-C2</string>
    <string name="story_title">Hikaye Başlığı</string>
    <string name="story_content">Hikaye içeriği burada görünecek...</string>
    <string name="create_a_new_story">Yeni Hikaye Üret</string>
    <string name="story_mode">Story Mode</string>
    <string name="swap_button">Swap button</string>
    <string name="source_text">Çevrilecek metni girin</string>
    <string name="translated_text">Çeviri..</string>
    <string name="translate">Çevir</string>
    <string name="turkish">Türkçe</string>
    <string name="English">İngilizce</string>
</resources>
