<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/oxfordWordsFragment"
        android:icon="@drawable/ic_oxford_3000_words"
        android:title="@string/oxford_3000_words" />
    <item
        android:id="@+id/mainPageFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/main_page" />

    <item
        android:id="@+id/mostCommonWordsFragment"
        android:icon="@drawable/ic_most_common_c1_c2"
        android:title="@string/most_common_words" />
    <item
        android:id="@+id/mostCommonPhrasesFragment"
        android:icon="@drawable/ic_most_common_phrase"
        android:title="@string/most_common_phrases" />
    <item
        android:id="@+id/listenAndLearnFragment"
        android:icon="@drawable/ic_listen_and_learn"
        android:title="@string/listen_and_learn" />
    <item
        android:id="@+id/aiTutorFragment"
        android:icon="@drawable/ic_ai_tutor"
        android:title="@string/ai_tutor" />
    <item
        android:id="@+id/translatorFragment"
        android:icon="@drawable/ic_translate"
        android:title="@string/translator" />
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorites" />
    <item
        android:id="@+id/upgradeProFragment"
        android:icon="@drawable/ic_upgrade_pro"
        android:title="@string/upgrade_pro" />
    <item
        android:id="@+id/myAccountFragment"
        android:icon="@drawable/ic_account"
        android:title="@string/my_account" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/feedbackFragment"
        android:icon="@drawable/ic_feedback"
        android:title="@string/feedback" />
    <item
        android:id="@+id/aboutUsFragment"
        android:icon="@drawable/ic_about_us"
        android:title="@string/about_us" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />
</menu>